--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/App.js",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.211.0",
     "expo": "^25.0.0",
+    "firebase": "^4.11.0",
+    "lodash": "^4.17.5",
     "react": "16.2.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-aws3": "^0.0.8",
+    "react-native-config": "^0.11.5",
+    "react-native-fbsdk": "^0.7.0",
+    "react-navigation": "^1.5.8",
+    "react-navigation-redux-helpers": "^1.0.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0"
   }
 }
