Add react-native-expo-image-cache library.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-aws3": "^0.0.8",
     "react-native-config": "^0.11.5",
+    "react-native-expo-image-cache": "^2.0.2",
     "react-native-fbsdk": "^0.7.0",
     "react-navigation": "^1.5.8",
     "react-navigation-redux-helpers": "^1.0.3",
