Install Expo vector icons.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "src/App.js",
   "private": true,
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "aws-sdk": "^2.211.0",
     "expo": "^25.0.0",
     "firebase": "^4.11.0",
